--- a/src/assets/input.css
+++ b/src/assets/input.css
@@ -1,3 +1,52 @@
+:root {
+    --font-family: 'Open Sans', sans-serif;
+
+    --fs-100: clamp(0.5625rem, 0.5379rem + 0.1228vw, 0.6331rem);
+    --fs-200: clamp(0.75rem, 0.7174rem + 0.163vw, 0.8438rem);
+    --fs-300: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
+    --fs-400: clamp(1.3331rem, 1.2753rem + 0.2891vw, 1.4994rem);
+    --fs-500: clamp(1.7769rem, 1.6997rem + 0.3859vw, 1.9988rem);
+    --fs-600: clamp(2.3688rem, 2.2659rem + 0.5141vw, 2.6644rem);
+    --fs-700: clamp(3.1575rem, 3.0203rem + 0.6859vw, 3.5519rem);
+    --fs-800: clamp(4.2088rem, 4.0257rem + 0.9152vw, 4.735rem);    
+
+    --fw-300: 300;
+    --fw-400: 400;
+    --fw-500: 500;
+    --fw-600: 600;
+    --fw-700: 700;
+
+    --br-sm: 8px;
+    --br-md: 12px;
+    --br-lg: 16px;
+
+    --transition: all 0.2s ease-in-out;
+
+    --text-opacity: 0.2;
+    --text-rgba: rgba(17, 8, 2, var(--text-opacity));
+    --box-shadow: 0px 6px 12px 0px var(--text-rgba);
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --text: #110802;
+        --background: #fdf7f3;
+        --primary: #e26e21;
+        --secondary: #e6ee80;
+        --accent: #bde851;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --text: #fdf3ed;
+        --background: #0d0702;
+        --primary: #dd6a1d;
+        --secondary: #767e11;
+        --accent: #85b017;
+    }
+}
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
