--- a/src/assets/input.css
+++ b/src/assets/input.css
@@ -22,6 +22,10 @@
     }
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
