--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -644,6 +644,10 @@ video {
   z-index: 10;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -669,16 +673,16 @@ video {
   height: 1rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .w-4 {
   width: 1rem;
 }
 
-.w-auto {
-  width: auto;
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[100\%\] {
@@ -689,8 +693,24 @@ video {
   max-width: calc(100vw - 2rem);
 }
 
+.grow {
+  flex-grow: 1;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -729,6 +749,18 @@ video {
   gap: 0.75rem;
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -741,8 +773,16 @@ video {
   border-radius: 0.375rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-0 {
   border-width: 0px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-t-2 {
@@ -759,6 +799,10 @@ video {
 
 .bg-\[none\] {
   background-color: none;
+}
+
+.bg-background {
+  background-color: var(--background);
 }
 
 .bg-primary {
@@ -908,7 +952,7 @@ video {
 
 /* Tailwind classes for the label to improve accessibility */
 
-.custome-checkbox-wrapper {
+.custom-checkbox-wrapper {
   position: relative;
   cursor: pointer;
 }
@@ -927,6 +971,18 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   /* Other styles for disabled state */
+}
+
+.inner-margin > * {
+  margin: 0.5rem;
+}
+
+.placeholder\:text-text::-moz-placeholder {
+  color: var(--text);
+}
+
+.placeholder\:text-text::placeholder {
+  color: var(--text);
 }
 
 .hover\:bg-primary:hover {
