feat - make all element in addButton centered

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -747,6 +747,10 @@ video {
   place-items: center;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .content-between {
   align-content: space-between;
 }
