--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -659,6 +659,11 @@ video {
   margin-right: 10rem;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
