--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -731,6 +731,10 @@ video {
   align-content: space-between;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -753,10 +757,6 @@ video {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .rounded-md {
@@ -789,10 +789,6 @@ video {
 
 .bg-primary {
   background-color: var(--primary);
-}
-
-.bg-secondary {
-  background-color: var(--secondary);
 }
 
 .bg-transparent {
