fix - make sure text is not added to label - RenderTodos form local storages adds empty todo to end - TodoComponent alight the main layout to the start of the flex area

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -731,6 +731,10 @@ video {
   align-content: space-between;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-end {
   align-items: flex-end;
 }
