feat: checkpoint got nav bar set up - need to work on a way to get list to be persistent just like todo

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -780,8 +780,16 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
+}
+
+.justify-items-end {
+  justify-items: end;
 }
 
 .gap-1 {
